kubernetes/apps/utilities/notes/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  namespace: utilities
  name: notes
  labels:
    app: notes
spec:
  replicas: 1
  selector:
    matchLabels:
      app: notes
  template:
    metadata:
      labels:
        app: notes
    spec:
      securityContext:
        fsGroup: 1000
      containers:
        - name: notes
          image: zadam/trilium:latest
          imagePullPolicy: Always
          ports:
            - containerPort: 10000
          livenessProbe:
            httpGet:
              path: /
              port: 10000
          readinessProbe:
            httpGet:
              path: /
              port: 10000
          resources:
            requests:
              memory: 128Mi
              cpu: 10m
            limits:
              memory: 128Mi
              cpu: 250m
          volumeMounts:
            - name: trilium-data
              mountPath: /data
      volumes:
        - name: trilium-data
          persistentVolumeClaim:
            claimName: trilium-data-pvc
