kubernetes/apps/utilities/notes/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: notes
  namespace: utilities
spec:
  type: ClusterIP
  ports:
    - port: 10000
      targetPort: 10000
  selector:
    app: notes
