kubernetes/apps/utilities/notes/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  namespace: utilities
  name: notes
  annotations:
    external-dns.alpha.kubernetes.io/target: "external.rutberg.dev"
spec:
  ingressClassName: external
  rules:
    - host: notes.rutberg.dev
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: notes
                port:
                  number: 10000
